--- a/www.dz-rs.si/837b14e2b8ea6baf8220b365e6df59f35442d7f1.yml
+++ b/www.dz-rs.si/837b14e2b8ea6baf8220b365e6df59f35442d7f1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:45:36 GMT
+    - Tue, 03 Apr 2018 04:26:16 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=00000Bfm069KL2_VDvUSySNg9PU:-1; Path=/; HttpOnly
+    - JSESSIONID=0000AQ-Go6wX8QdwgAs98KO1zif:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;743201;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=fd938310;default;FP4->50;C003;
+    - F7360B2047A90E4D;87d9ab10;1104741;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->56;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-743201)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1104741)
     Content-Length:
-    - '12856'
+    - '12854'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:45:35 GMT
+recorded_at: Tue, 03 Apr 2018 04:26:14 GMT
