--- a/www.dz-rs.si/d34a01360bfc36f05587ac3526af2fa2f288ba87.yml
+++ b/www.dz-rs.si/d34a01360bfc36f05587ac3526af2fa2f288ba87.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:47:16 GMT
+    - Tue, 03 Apr 2018 04:28:06 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000mfgUQT1oSmvEWpQFcJP1U5K:-1; Path=/; HttpOnly
+    - JSESSIONID=0000s2nggKMX57dwUYQsuiHNMe4:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;743715;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->12;EvalII->12;CHd;FP2->12;WS=fd938310;default;FP4->73;C003;
+    - F7360B2047A90E4D;87d9ab10;1105362;usrLkup->0;usrBase->1;getPRBefFind->1;getPRBefFind->1;PRAfterFind->1;portal-en;publicURL->1;http-www;default;SH;FF1End->1;SendSoapStart->1;SendSoapExit->18;EvalII->18;CHd;FP2->18;WS=fd938310;default;FP4->78;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-743715)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1105362)
     Content-Length:
-    - '13378'
+    - '13376'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:47:13 GMT
+recorded_at: Tue, 03 Apr 2018 04:28:03 GMT
