--- a/www.dz-rs.si/f5640a6e601550127cb9677a97493a118fb24890.yml
+++ b/www.dz-rs.si/f5640a6e601550127cb9677a97493a118fb24890.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:47:56 GMT
+    - Tue, 03 Apr 2018 04:28:55 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=00004BAk-ztBwTE3vvhcu3jfu1G:-1; Path=/; HttpOnly
+    - JSESSIONID=0000TEOMIusAb-To7wmSvyVESdN:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;743878;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->51;C003;
+    - F7360B2047A90E4D;87d9ab10;1105549;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=fd938310;default;FP4->80;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-743878)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1105549)
     Content-Length:
     - '12793'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:47:54 GMT
+recorded_at: Tue, 03 Apr 2018 04:28:53 GMT
