--- a/www.dz-rs.si/d389946fce87d48d9a3419a44569718127a8655d.yml
+++ b/www.dz-rs.si/d389946fce87d48d9a3419a44569718127a8655d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:48:12 GMT
+    - Tue, 03 Apr 2018 04:29:08 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000MdtDdI5ZvG71M3OQ9QClbKQ:-1; Path=/; HttpOnly
+    - JSESSIONID=0000NDnPJIlXECLRUR2hr9UHUpJ:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;743954;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->63;C003;
+    - F7360B2047A90E4D;87d9ab10;1105611;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->56;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-743954)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1105611)
     Content-Length:
-    - '12953'
+    - '12952'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:48:10 GMT
+recorded_at: Tue, 03 Apr 2018 04:29:06 GMT
