--- a/www.dz-rs.si/2652efee7e43257e074822938f66c0107bb8378c.yml
+++ b/www.dz-rs.si/2652efee7e43257e074822938f66c0107bb8378c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:48:21 GMT
+    - Tue, 03 Apr 2018 04:29:21 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000zuwO9sLEyEpeXgTxkEzCAW9:-1; Path=/; HttpOnly
+    - JSESSIONID=0000c6-zJhxJl_CS8ZbHkM2NRxb:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;744013;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->6;EvalII->6;CHd;FP2->6;WS=fd938310;default;FP4->486;C003;
+    - F7360B2047A90E4D;87d9ab10;1105645;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->10;EvalII->10;CHd;FP2->10;WS=fd938310;default;FP4->88;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-744013)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1105645)
     Content-Length:
-    - '12768'
+    - '12770'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:48:18 GMT
+recorded_at: Tue, 03 Apr 2018 04:29:19 GMT
