--- a/www.dz-rs.si/cf1c11b299cf24e92b5aaaee464e87f445b9a81c.yml
+++ b/www.dz-rs.si/cf1c11b299cf24e92b5aaaee464e87f445b9a81c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:49:00 GMT
+    - Tue, 03 Apr 2018 04:29:59 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000F8hS8GgaWDjz4sy9pxNDMUQ:-1; Path=/; HttpOnly
+    - JSESSIONID=0000manoJqgNlfbPaIKf4NYf9_t:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;744209;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->54;C003;
+    - F7360B2047A90E4D;87d9ab10;1105848;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=fd938310;default;FP4->57;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-744209)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1105848)
     Content-Length:
-    - '13184'
+    - '13187'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:48:58 GMT
+recorded_at: Tue, 03 Apr 2018 04:29:57 GMT
