--- a/www.dz-rs.si/2b75c7a717b2ed7850ba8ac719b11d54ccc1300b.yml
+++ b/www.dz-rs.si/2b75c7a717b2ed7850ba8ac719b11d54ccc1300b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:49:09 GMT
+    - Tue, 03 Apr 2018 04:30:13 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=00005YwmkVrp0gJO06OYf9n2p-2:-1; Path=/; HttpOnly
+    - JSESSIONID=0000B0D0_0R7vgbzu419EUuqS8a:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;744243;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->59;C003;
+    - F7360B2047A90E4D;87d9ab10;1105934;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->82;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-744243)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1105934)
     Content-Length:
     - '12386'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:49:06 GMT
+recorded_at: Tue, 03 Apr 2018 04:30:11 GMT
