--- a/www.dz-rs.si/4245e7a8c9a42f4d9b42786ddff45610f357f5f8.yml
+++ b/www.dz-rs.si/4245e7a8c9a42f4d9b42786ddff45610f357f5f8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:49:39 GMT
+    - Tue, 03 Apr 2018 04:30:52 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000PaPb6W2Hl8IHDrADQ7_UtVe:-1; Path=/; HttpOnly
+    - JSESSIONID=0000i3NAa9jYdiY9y1nl4VZMhnt:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;744353;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->87;C003;
+    - F7360B2047A90E4D;87d9ab10;1106101;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->56;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-744353)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1106101)
     Content-Length:
     - '12747'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:49:38 GMT
+recorded_at: Tue, 03 Apr 2018 04:30:50 GMT
