--- a/www.dz-rs.si/560633a0d09cfe7f2fc1dc02a8ba1ddf27b71347.yml
+++ b/www.dz-rs.si/560633a0d09cfe7f2fc1dc02a8ba1ddf27b71347.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:49:53 GMT
+    - Tue, 03 Apr 2018 04:31:04 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000e_JpFu25nDRDlfF8OD5-hgj:-1; Path=/; HttpOnly
+    - JSESSIONID=0000W9TptXHxjyNMTwIQo6E8QWW:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;744425;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->6;EvalII->6;CHd;FP2->6;WS=fd938310;default;FP4->81;C003;
+    - F7360B2047A90E4D;87d9ab10;1106155;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->61;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-744425)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1106155)
     Content-Length:
     - '13196'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:49:50 GMT
+recorded_at: Tue, 03 Apr 2018 04:31:03 GMT
