--- a/www.dz-rs.si/5a6a5ab46fd9fd8418e9f4dd445848f2f4c480d0.yml
+++ b/www.dz-rs.si/5a6a5ab46fd9fd8418e9f4dd445848f2f4c480d0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:50:16 GMT
+    - Tue, 03 Apr 2018 04:31:31 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000G7tvubggaeozqFXEbIyfuIr:-1; Path=/; HttpOnly
+    - JSESSIONID=0000K-7bioOAz4pm4LYoEi4PBUX:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;744527;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->55;C003;
+    - F7360B2047A90E4D;87d9ab10;1106254;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->123;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-744527)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1106254)
     Content-Length:
     - '13323'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:50:14 GMT
+recorded_at: Tue, 03 Apr 2018 04:31:29 GMT
