--- a/www.dz-rs.si/db1a671ad95d3fd22dc912ac0ac130a2e54486f4.yml
+++ b/www.dz-rs.si/db1a671ad95d3fd22dc912ac0ac130a2e54486f4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:50:54 GMT
+    - Tue, 03 Apr 2018 04:32:11 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000pso8HhQ2LTV_TTtLbHjNFPn:-1; Path=/; HttpOnly
+    - JSESSIONID=00009eVzBAqw9RrCJi9X-aLWsCw:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;744694;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=fd938310;default;FP4->73;C003;
+    - F7360B2047A90E4D;87d9ab10;1106438;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->69;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-744694)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1106438)
     Content-Length:
-    - '12961'
+    - '12960'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:50:52 GMT
+recorded_at: Tue, 03 Apr 2018 04:32:09 GMT
