--- a/www.dz-rs.si/06086685e1fb317ba86b9dd7837c5c1b6b4119e5.yml
+++ b/www.dz-rs.si/06086685e1fb317ba86b9dd7837c5c1b6b4119e5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:51:08 GMT
+    - Tue, 03 Apr 2018 04:32:21 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000C7CwxlafBwsIDELwmOOcLLi:-1; Path=/; HttpOnly
+    - JSESSIONID=0000YxnMywXlVp0OP7p9CkEz6qB:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;744741;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->7;EvalII->7;CHd;FP2->7;WS=fd938310;default;FP4->64;C003;
+    - F7360B2047A90E4D;87d9ab10;1106472;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->115;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-744741)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1106472)
     Content-Length:
     - '13229'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:51:06 GMT
+recorded_at: Tue, 03 Apr 2018 04:32:19 GMT
