--- a/www.dz-rs.si/0381fa4f5fbc228f217a3a0d4f28e834ca6355d1.yml
+++ b/www.dz-rs.si/0381fa4f5fbc228f217a3a0d4f28e834ca6355d1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:51:18 GMT
+    - Tue, 03 Apr 2018 04:32:33 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000_f1R14itosIrVd09-Iw9ypi:-1; Path=/; HttpOnly
+    - JSESSIONID=0000wECjzqhac8Ssa5dSeiBmPue:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;744772;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->66;C003;
+    - F7360B2047A90E4D;87d9ab10;1106567;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->80;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-744772)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1106567)
     Content-Length:
-    - '12740'
+    - '12742'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:51:16 GMT
+recorded_at: Tue, 03 Apr 2018 04:32:31 GMT
