--- a/www.dz-rs.si/ddaf4e1da67985ccffffd7d04f2b9e03ce569e3d.yml
+++ b/www.dz-rs.si/ddaf4e1da67985ccffffd7d04f2b9e03ce569e3d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:51:28 GMT
+    - Tue, 03 Apr 2018 04:32:48 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000_lcTVjiY9cjhGM52O1jUMFQ:-1; Path=/; HttpOnly
+    - JSESSIONID=0000T8l-JpEVPXg35IdC9SxQkmT:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;744803;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->64;C003;
+    - F7360B2047A90E4D;87d9ab10;1106633;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->10;EvalII->10;CHd;FP2->10;WS=fd938310;default;FP4->63;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-744803)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1106633)
     Content-Length:
     - '13320'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:51:27 GMT
+recorded_at: Tue, 03 Apr 2018 04:32:46 GMT
