--- a/www.dz-rs.si/0b5eaedd05b4f495145c7da3dc245a3dbf607280.yml
+++ b/www.dz-rs.si/0b5eaedd05b4f495145c7da3dc245a3dbf607280.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:52:03 GMT
+    - Tue, 03 Apr 2018 04:33:20 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=00006Lth3F4P5tdySm1lYav4Msf:-1; Path=/; HttpOnly
+    - JSESSIONID=0000U6SWBL5vi99NEWfrwfuuqdd:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;744944;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->60;C003;
+    - F7360B2047A90E4D;87d9ab10;1106919;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->64;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-744944)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1106919)
     Content-Length:
-    - '14003'
+    - '14045'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:52:00 GMT
+recorded_at: Tue, 03 Apr 2018 04:33:20 GMT
