--- a/www.dz-rs.si/e3e2ca5b3561c28f3fc47f31bb17ecf6e442b35f.yml
+++ b/www.dz-rs.si/e3e2ca5b3561c28f3fc47f31bb17ecf6e442b35f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:53:06 GMT
+    - Tue, 03 Apr 2018 04:34:21 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000Aqq274cGC4PKC5rS3WwFdHk:-1; Path=/; HttpOnly
+    - JSESSIONID=0000mPGdZ2xfjfferLHz4J3wEua:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;745292;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->6;EvalII->6;CHd;FP2->6;WS=fd938310;default;FP4->58;C003;
+    - F7360B2047A90E4D;87d9ab10;1107223;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->59;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-745292)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1107223)
     Content-Length:
     - '13166'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:53:05 GMT
+recorded_at: Tue, 03 Apr 2018 04:34:19 GMT
