--- a/www.dz-rs.si/84e3f18ec6cf0a5586155075e3319d4bf4c350bf.yml
+++ b/www.dz-rs.si/84e3f18ec6cf0a5586155075e3319d4bf4c350bf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 02 Apr 2018 08:53:33 GMT
+    - Tue, 03 Apr 2018 04:34:40 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000Uy8i7bjgJ0mXUeEORm3aSva:-1; Path=/; HttpOnly
+    - JSESSIONID=0000e9yOc9g0-OmDQuRmBtbGAoz:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;745391;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=fd938310;default;FP4->57;C003;
+    - F7360B2047A90E4D;87d9ab10;1107317;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->82;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-745391)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-1107317)
     Content-Length:
     - '12884'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 02 Apr 2018 08:53:31 GMT
+recorded_at: Tue, 03 Apr 2018 04:34:38 GMT
