--- a/www.dz-rs.si/58506b5b8c3b5295fb8f689bf15d37c0091c3cf2.yml
+++ b/www.dz-rs.si/58506b5b8c3b5295fb8f689bf15d37c0091c3cf2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 01 May 2018 13:16:57 GMT
+    - Wed, 02 May 2018 21:58:32 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000pEDM2mJCj7AnEbpcBV-21XR:-1; Path=/; HttpOnly
+    - JSESSIONID=0000tKxk7z_v9MMuGmiGiQp8dPH:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25296887;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=fd938310;default;FP4->46;C003;
+    - F7360B2047A90E4D;87d9ab10;154907;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->53;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25296887)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-154907)
     Content-Length:
     - '12831'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 01 May 2018 13:16:56 GMT
+recorded_at: Wed, 02 May 2018 21:58:29 GMT
