--- a/www.dz-rs.si/91a406fbd7f8dcb74da2af2e463579978ad9e4a9.yml
+++ b/www.dz-rs.si/91a406fbd7f8dcb74da2af2e463579978ad9e4a9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 01 May 2018 13:17:38 GMT
+    - Wed, 02 May 2018 21:59:06 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000J5XZcZfyf1q8UQJ6S-KHz_W:-1; Path=/; HttpOnly
+    - JSESSIONID=0000RpC3nM01Yo-wVgo-yKtCLWH:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25297134;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->49;C003;
+    - F7360B2047A90E4D;87d9ab10;154985;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->54;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25297134)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-154985)
     Content-Length:
-    - '12879'
+    - '12881'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 01 May 2018 13:17:37 GMT
+recorded_at: Wed, 02 May 2018 21:59:03 GMT
