--- a/www.dz-rs.si/744f9afd643006b458266f7ce210b28620f47b87.yml
+++ b/www.dz-rs.si/744f9afd643006b458266f7ce210b28620f47b87.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 01 May 2018 13:17:52 GMT
+    - Wed, 02 May 2018 21:59:19 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000b5iqfdJXwG9mffHQuclnwuP:-1; Path=/; HttpOnly
+    - JSESSIONID=0000pg29EAPalO4KV6yky3MtLox:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25297202;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->65;C003;
+    - F7360B2047A90E4D;87d9ab10;154994;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->15;EvalII->15;CHd;FP2->15;WS=fd938310;default;FP4->76;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25297202)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-154994)
     Content-Length:
     - '12389'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 01 May 2018 13:17:51 GMT
+recorded_at: Wed, 02 May 2018 21:59:18 GMT
