--- a/www.dz-rs.si/dc887d1fb188ba7c3f7046b75b11edd0bcdd80b0.yml
+++ b/www.dz-rs.si/dc887d1fb188ba7c3f7046b75b11edd0bcdd80b0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 01 May 2018 13:18:43 GMT
+    - Wed, 02 May 2018 22:00:07 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=00001lak8oP_CLh7kPNdE6miocm:-1; Path=/; HttpOnly
+    - JSESSIONID=00003Ht0T6mBke_ERaTqsTFYi84:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25297449;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->53;C003;
+    - F7360B2047A90E4D;87d9ab10;155114;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=fd938310;default;FP4->52;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25297449)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155114)
     Content-Length:
     - '12836'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 01 May 2018 13:18:42 GMT
+recorded_at: Wed, 02 May 2018 22:00:04 GMT
