--- a/www.dz-rs.si/a44bee10da7350772adc62d5e510f23c87dea420.yml
+++ b/www.dz-rs.si/a44bee10da7350772adc62d5e510f23c87dea420.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 01 May 2018 13:18:55 GMT
+    - Wed, 02 May 2018 22:00:15 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000EccqERTo14iNAMsgQxLHj0s:-1; Path=/; HttpOnly
+    - JSESSIONID=0000_INcSf9D6z6-TqbDKj3nG5f:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25297506;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->89;C003;
+    - F7360B2047A90E4D;87d9ab10;155133;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->51;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25297506)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155133)
     Content-Length:
-    - '12937'
+    - '12935'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 01 May 2018 13:18:54 GMT
+recorded_at: Wed, 02 May 2018 22:00:13 GMT
